--- a/feedpage/templates/base.html
+++ b/feedpage/templates/base.html
@@ -9,7 +9,8 @@
     <header style="width: 100%; background-color: mediumslateblue; color: white; text-align: left;">
       <div style="text-align: right;">
         {% if user.is_authenticated %}
-             {{ user.get_username }}님, 안녕하세요
+             {{ user.get_username }}님, 안녕하세요 |
+             내가 좋아한 글 {{ user.feeds_liked.count }}개
              {% comment %} 장고의 기본 user기능을 이용하기 때문에 그냥 url logout해도 자동으로 로그아웃 기능이 되는것! {% endcomment %}
              <a href="{% url 'logout'%}?next={{request.path}}">로그아웃</a>
         {% else %}
